# Open_Office

./: README.md
Easy_Office/: CMakeLists.txt  Excel_Methods.cpp  Excel_Methods.h  Methods.cpp  Methods.h  Open.h  OutLook.cpp  OutLook.h  PPT_Methods.cpp  PPT_Methods.h  Word_Methods.cpp  Word_Methods.h  open.cpp
Test_Code/: CMakeLists.txt  Open.h  test.cpp
